--- a/recipes/kabsa.html
+++ b/recipes/kabsa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kabsa recipe</title>
+    <title>Kabsa</title>
 </head>
 <body>
     <h1> Kabsa </h1>
@@ -15,15 +15,15 @@
     <ul>
         <il> Rice</il>
         <il> Meat or Chicken</il>
-        <il> spices </il>
+        <il> spices -cinnamon, cardamom, cloves, black lime</il>
         <li> love</li>
     </ul>
     <h2> Steps </h2>
     <ol>
-        <li> Brown the meat</li>
-        <li> Add tomatos and paste</li>
-        <li> Add broth </li>
-        <li> Add the rice</li>
+        <li> Fry onions and spices in oil</li>
+        <li> Add meat/chicken and cook until browned</li>
+        <li> Mix in tomatoes, then add water/broth </li>
+        <li> Add rice, cover, and simmer until tender</li>
     </ol>
     <a href = "../index.html "> Homepage</a>
 </body>
