--- a/recipes/kabsa.html
+++ b/recipes/kabsa.html
@@ -13,9 +13,9 @@
     <p> There are slight variations in the way that its cooked, but generaly its always cooked with meat or chicken</p>
     <h2> Ingredients</h2>
     <ul>
-        <il> Rice</li>
-        <il> Meat or Chicken</il>
-        <il> spices -cinnamon, cardamom, cloves, black lime</li>
+        <li> Rice</li>
+        <li> Meat or Chicken</li>
+        <li> spices -cinnamon, cardamom, cloves, black lime</li>
         <li> love</li>
     </ul>
     <h2> Steps </h2>
